# youtube-rag

./: Readme.md  docker-compose.yml
client/: .env.sample  Dockerfile.dev  package.json  pnpm-lock.yaml
client/src/: App.tsx  (+1 more)
server/: .dockerignore  .env.sample  .gitignore  Dockerfile.dev  celery_tasks.py  email_worker.py  main.py  pyproject.toml  run.py  transcribe_worker.py
server/app/: main.py
server/app/api/: router.py
server/app/api/v1/: auth.py  query.py  transcribe.py  user.py
server/app/core/: async_redis.py  config.py  database.py  qdrant.py  redis.py
server/app/lib/: transcript.py
server/app/models/: __init__.py  user.py  user_to_videos.py  video.py
server/app/schemas/: transcribe.py  user.py
server/app/services/v1/: auth_services.py  transcribe.py
server/app/utils/: get_current_user.py  llm.py
server/core/: async_redis.py  config.py  embedding_models.py  redis.py
server/migrations/: env.py
server/migrations/versions/: 09d0b34940b6_video_schema_changes.py  17e9fa2874c0_timestamp_for_concurrency.py  28c9e02fdfa8_user_schema.py  3a96ec870ed8_relations_defined.py  5edee166e1aa_video_schema_updated.py  77ffc6d9a957_user_schema_upgrade.py  85bce343c2c9_timestamp_for_concurrency.py  a5da56f97901_video_schema_updated.py
server/models/: __init__.py  user.py  user_to_videos.py  video.py
server/schemas/: transcribe.py
server/services/v1/: transcribe.py
server/utils/: urls.py
server/workers/: email_worker.py  transcribe_worker.py
server/workers/utils/: email_templates.py  embedding_models.py  qdrant.py  redis_instance.py  transcript.py
(+10 files in other folders)
