[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.127.1",
    "fastapi-limiter>=0.1.6",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]
