[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.127.1",
    "fastapi-limiter>=0.1.6",
    "fastembed>=0.7.4",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]
